feat: manual face culling for skeleton model